# spring-ai-geek

./: .gitattributes  .gitignore  README.md  build.gradle.kts  docker-compose.yaml  requests.http  settings.gradle.kts
application/api/: build.gradle.kts
application/api/src/docs/asciidoc/: index.adoc
application/api/src/main/resources/: application.yaml
application/api/src/main/resources/prompts/: qa-1.st  rag-search-summarize.st
application/batch/: build.gradle.kts
application/batch/src/main/resources/: application.yaml
application/batch/src/main/resources/iso3166/: country.json  slim-2.json
application/llm/src/main/resources/prompts/: qa-1.st  writing-assistant-simple.st
application/llm/src/main/resources/prompts/common/: system-basic.st
application/llm/src/main/resources/prompts/searching/: system-basic.st
client/: build.gradle.kts
client/src/main/resources/: client.yaml
dataflow/: pyproject.toml
dataflow/dataset/: request_sync.py  syncable_countries.py
dataflow/example/: demo_api.ipynb  demo_trade_stats_api_2.ipynb
llm-service/: build.gradle.kts
llm-service/src/main/resources/: llm-service.yaml
llm-service/src/main/resources/prompts/searching/: system-basic.st  user-basic.st
shared/: build.gradle.kts
storage/memorydb/: build.gradle.kts
storage/memorydb/src/main/resources/: storage-memorydb.yaml
storage/rds/: build.gradle.kts
storage/rds/src/main/resources/: storage-rds.yaml
storage/vectordb/: build.gradle.kts
storage/vectordb/src/main/resources/: storage-vectordb.yaml
tests/rest-docs/: build.gradle.kts
(+197 files in other folders)
